--- a/Phone-namber.html
+++ b/Phone-namber.html
@@ -23,7 +23,7 @@
               src="/img/images.jpg"
               alt="logo" />
             <span class="text-xl sm:text-3xl font-bold leading-none">
-              Bikroy
+             <a href="/acount.html"> bikroy</a>
             </span>
           </div>
 
@@ -53,10 +53,10 @@
           </div>
 
           <!-- Post Button -->
-          <button
+         <a href=""> <button
             class="bg-[#ffc800] text-black text-sm sm:text-base font-semibold px-3 sm:px-4 py-2 rounded hover:bg-yellow-400 transition">
             POST FREE AD
-          </button>
+          </button></a>
 
           <!-- Hamburger (Mobile Only) -->
           <button class="md:hidden text-2xl">
@@ -109,7 +109,7 @@
               </a>
 
               <a
-                href="#"
+                href="/Phone-namber.html"
                 class="flex justify-between items-center pb-3 border-b text-blue-600">
                 Phone Numbers
                 <span class="text-gray-400">›</span>
@@ -121,14 +121,14 @@
               </div>
 
               <a
-                href="#"
+                href="/profile.html"
                 class="flex justify-between items-center pb-3 border-b text-blue-600 mt-3">
                 My Profile
                 <span class="text-gray-400">›</span>
               </a>
 
               <a
-                href="#"
+                href="/profile-database.html"
                 class="flex justify-between items-center pb-3 border-b text-blue-600">
                 Profile Database
                 <span class="text-gray-400">›</span>
