--- a/profile-database.html
+++ b/profile-database.html
@@ -23,7 +23,7 @@
               src="/img/images.jpg"
               alt="logo" />
             <span class="text-xl sm:text-3xl font-bold leading-none">
-              Bikroy
+              <a href="/">Bikroy</a>
             </span>
           </div>
 
@@ -53,10 +53,10 @@
           </div>
 
           <!-- Post Button -->
-          <button
+       <a href=""> <button
             class="bg-[#ffc800] text-black text-sm sm:text-base font-semibold px-3 sm:px-4 py-2 rounded hover:bg-yellow-400 transition">
             POST FREE AD
-          </button>
+          </button></a>
 
           <!-- Hamburger (Mobile Only) -->
           <button class="md:hidden text-2xl">
