--- a/Mymembership.html
+++ b/Mymembership.html
@@ -23,7 +23,7 @@
               src="/img/images.jpg"
               alt="logo" />
             <span class="text-xl sm:text-3xl font-bold leading-none">
-              Bikroy
+             <a href="/">Bikroy</a>
             </span>
           </div>
 
@@ -53,10 +53,10 @@
           </div>
 
           <!-- Post Button -->
-          <button
+          <a href=""> <button
             class="bg-[#ffc800] text-black text-sm sm:text-base font-semibold px-3 sm:px-4 py-2 rounded hover:bg-yellow-400 transition">
             POST FREE AD
-          </button>
+          </button></a>
 
           <!-- Hamburger (Mobile Only) -->
           <button class="md:hidden text-2xl">
@@ -89,7 +89,7 @@
                 <span class="text-gray-400">›</span>
               </a>
               <a
-                href="#"
+                href="/Saved-searches.html"
                 class="flex justify-between items-center pb-3 border-b text-blue-600">
                 Saved searches
                 <span class="text-gray-400">›</span>
@@ -165,7 +165,7 @@
 
                 <button
                   class="mt-6 bg-[#1f8f6f] hover:bg-[#167a5f] text-white font-semibold px-6 py-3 rounded-md transition">
-                  Contact us
+                <a href="/Contact-us.html">  Contact us</a>
                 </button>
               </div>
             </div>
