--- a/OPPO.html
+++ b/OPPO.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -53,7 +53,7 @@
           </div>
 
           <!-- Post Button -->
-         <a href=""> <button
+          <a href=""> <button
             class="bg-[#ffc800] text-black text-sm sm:text-base font-semibold px-3 sm:px-4 py-2 rounded hover:bg-yellow-400 transition">
             POST FREE AD
           </button></a>
@@ -66,111 +66,148 @@
       </div>
     </div>
 
-    <!-- acount section -->
-    <div class="bg-[#eef2f3] min-h-screen py-10">
-      <div class="max-w-6xl mx-auto bg-white rounded-lg p-6">
-        <div class="flex flex-col lg:flex-row gap-8">
-          <!-- Sidebar -->
-          <div class="w-full lg:w-1/4">
-            <h2 class="text-lg font-semibold text-gray-700 mb-6">Account</h2>
 
-            <div class="space-y-4 text-[15px]">
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-gray-700 font-semibold">
-                My ads
-                <span class="text-gray-400">›</span>
-              </a>
+ <!-- Account Section -->
+<div class="bg-[#eef2f3] min-h-screen py-6 md:py-10">
+  <div class="max-w-6xl mx-auto px-4">
 
-              <a
-                href="/acount.html"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                My membership
-                <span class="text-gray-400">›</span>
-              </a>
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Saved searches
-                <span class="text-gray-400">›</span>
-              </a>
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Favorites
-                <span class="text-gray-400">›</span>
-              </a>
+    <!-- Title -->
+    <h1 class="text-xl md:text-3xl font-semibold mb-2">
+      Yamaha Saluto 125 UBS New model 2025
+    </h1>
+    <p class="text-xs md:text-sm text-gray-500 mb-6">
+      Posted on 22 Feb 12:56 am, Mirpur, Dhaka
+    </p>
 
-              <a
-                href="/Settings.html"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Settings
-                <span class="text-gray-400">›</span>
-              </a>
+    <!-- Main Grid -->
+    <div class="grid grid-cols-1 lg:grid-cols-3 gap-6">
 
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Phone Numbers
-                <span class="text-gray-400">›</span>
-              </a>
+      <!-- LEFT SIDE -->
+      <div class="lg:col-span-2 space-y-4">
 
-              <div
-                class="pt-6 text-gray-600 font-semibold flex items-center gap-2">
-                💼 Jobs
-              </div>
-
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600 mt-3">
-                My Profile
-                <span class="text-gray-400">›</span>
-              </a>
-
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Profile Database
-                <span class="text-gray-400">›</span>
-              </a>
-            </div>
-          </div>
-
-          <!-- Main Content -->
-          <div class="flex-1">
-            <!-- Page Title -->
-            <h2 class="text-xl font-semibold text-gray-800 border-b pb-4">
-              Favorites
-            </h2>
-
-            <!-- Empty State -->
-            <div
-              class="flex flex-col md:flex-row items-center md:items-start gap-8 py-16">
-              <!-- Star Icon -->
-              <div class="text-7xl text-yellow-400">★</div>
-
-              <!-- Text Content -->
-              <div class="max-w-xl text-center md:text-left">
-                <h3 class="text-lg font-semibold text-gray-800">
-                  You haven't marked any ads as favorite yet.
-                </h3>
-
-                <p class="text-gray-600 text-sm mt-4">
-                  Click on the star symbol on any ad to save it as a favorite.
-                </p>
-
-                <p class="text-gray-600 text-sm mt-2">
-                  Start to
-                  <a href="#" class="text-blue-600 hover:underline">
-                    browse ads
-                  </a>
-                  to find ads you would like to favorite.
-                </p>
-              </div>
-            </div>
-          </div>
+        <!-- Image -->
+        <div class="bg-white rounded shadow p-3 md:p-4">
+          <img src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
+               class="w-full h-[250px] md:h-[400px] object-cover rounded">
         </div>
+
+        <!-- Thumbnails -->
+        <div class="flex gap-3 overflow-x-auto pb-2">
+          <img src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
+               class="w-20 md:w-24 h-14 md:h-16 object-cover rounded border cursor-pointer">
+          <img src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
+               class="w-20 md:w-24 h-14 md:h-16 object-cover rounded border cursor-pointer">
+          <img src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
+               class="w-20 md:w-24 h-14 md:h-16 object-cover rounded border cursor-pointer">
+        </div>
+
+        <!-- Price -->
+        <h2 class="text-xl md:text-2xl text-green-600 font-bold">
+          Tk 138,000
+        </h2>
+
+        <!-- Details -->
+        <div class="bg-white rounded shadow p-4 md:p-6 text-sm space-y-2">
+          <p><strong>Brand:</strong> Yamaha</p>
+          <p><strong>Model:</strong> Saluto 125 UBS</p>
+          <p><strong>Year:</strong> 2025</p>
+          <p><strong>Condition:</strong> Used</p>
+          <p><strong>Engine capacity:</strong> 125 cc</p>
+          <p><strong>Kilometers run:</strong> 9,000 km</p>
+        </div>
+
+        <!-- Description -->
+        <div class="bg-white rounded shadow p-4 md:p-6">
+          <h3 class="font-semibold mb-3">Description</h3>
+          <p class="text-sm text-gray-600 leading-relaxed">
+            2025 model Yamaha Saluto 125 UBS.
+            2 years registration.
+            Dhaka metro number.
+            Digital plate & smart card available.
+            Self start & excellent condition.
+          </p>
+        </div>
+
       </div>
+
+      <!-- RIGHT SIDE -->
+      <div class="space-y-6">
+
+        <!-- Seller Card -->
+        <div class="bg-white rounded shadow p-4 md:p-6 space-y-4">
+
+          <div class="flex items-center gap-3">
+            <div class="w-12 h-12 bg-gray-300 rounded-full"></div>
+            <div>
+              <p class="font-semibold text-sm md:text-base">Bike Life</p>
+              <p class="text-xs text-gray-500">Member since 2021</p>
+            </div>
+          </div>
+
+          <button class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">
+            Show Phone Number
+          </button>
+
+          <button class="w-full border py-2 rounded hover:bg-gray-100 transition">
+            Chat
+          </button>
+
+          <button class="w-full bg-green-500 text-white py-2 rounded hover:bg-green-600 transition">
+            WhatsApp
+          </button>
+
+        </div>
+
+        <!-- Safety -->
+        <div class="bg-blue-50 border border-blue-200 rounded p-4 text-sm">
+          <h4 class="font-semibold mb-2 text-blue-700">
+            Stay Alert: Avoid Online Scams
+          </h4>
+          <ul class="list-disc list-inside text-gray-600 space-y-1">
+            <li>Never transfer money before meeting seller.</li>
+            <li>Inspect the item carefully.</li>
+            <li>Bikroy has no delivery service.</li>
+          </ul>
+        </div>
+
+      </div>
+
+    </div>
+
+    <!-- Related Ads -->
+    <div class="mt-10">
+      <h3 class="text-lg md:text-xl font-semibold mb-4">
+        More ads from this member
+      </h3>
+
+      <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
+
+        <div class="bg-white rounded shadow p-3">
+          <img src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
+               class="w-full h-24 md:h-28 object-cover rounded">
+          <p class="text-xs md:text-sm mt-2">Yamaha FZS V3 2024</p>
+          <p class="text-green-600 font-semibold text-sm">Tk 220,000</p>
+        </div>
+
+        <div class="bg-white rounded shadow p-3">
+          <img src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
+               class="w-full h-24 md:h-28 object-cover rounded">
+          <p class="text-xs md:text-sm mt-2">Yamaha Fazer 2025</p>
+          <p class="text-green-600 font-semibold text-sm">Tk 260,000</p>
+        </div>
+
+        <div class="bg-white rounded shadow p-3">
+          <img src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
+               class="w-full h-24 md:h-28 object-cover rounded">
+          <p class="text-xs md:text-sm mt-2">Yamaha FZS DD Deluxe</p>
+          <p class="text-green-600 font-semibold text-sm">Tk 240,000</p>
+        </div>
+
+      </div>
+    </div>
+
+  </div>
+  
        <!-- footer section -->
     <footer class="bg-[#f2f3f5] pt-14 pb-8">
       <div class="max-w-6xl mx-auto px-4">
@@ -284,6 +321,9 @@
         </div>
       </div>
     </footer>
+</div>
+
+
     </div>
 
    
