--- a/POST-FREE-AD.html
+++ b/POST-FREE-AD.html
@@ -53,11 +53,10 @@
           </div>
 
           <!-- Post Button -->
-         <a href=""> <button
+      <a href=""> <button
             class="bg-[#ffc800] text-black text-sm sm:text-base font-semibold px-3 sm:px-4 py-2 rounded hover:bg-yellow-400 transition">
             POST FREE AD
           </button></a>
-
           <!-- Hamburger (Mobile Only) -->
           <button class="md:hidden text-2xl">
             <i class="fa-solid fa-bars"></i>
@@ -68,110 +67,95 @@
 
     <!-- acount section -->
     <div class="bg-[#eef2f3] min-h-screen py-10">
-      <div class="max-w-6xl mx-auto bg-white rounded-lg p-6">
-        <div class="flex flex-col lg:flex-row gap-8">
-          <!-- Sidebar -->
-          <div class="w-full lg:w-1/4">
-            <h2 class="text-lg font-semibold text-gray-700 mb-6">Account</h2>
+    <div class="bg-[#eef2f3] py-10 px-4">
+  <div class="max-w-5xl mx-auto bg-white rounded shadow p-6 md:p-10">
 
-            <div class="space-y-4 text-[15px]">
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-gray-700 font-semibold">
-                My ads
-                <span class="text-gray-400">›</span>
-              </a>
+    <!-- Heading -->
+    <div class="text-center mb-10">
+      <h2 class="text-lg md:text-xl font-semibold mb-2">
+        Welcome Jackson Chakma! Let's post an ad.
+      </h2>
+      <p class="text-gray-600 text-sm md:text-base">
+        Choose any option below
+      </p>
+    </div>
 
-              <a
-                href="/acount.html"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                My membership
-                <span class="text-gray-400">›</span>
-              </a>
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Saved searches
-                <span class="text-gray-400">›</span>
-              </a>
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Favorites
-                <span class="text-gray-400">›</span>
-              </a>
+    <!-- Option Cards -->
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
 
-              <a
-                href="/Settings.html"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Settings
-                <span class="text-gray-400">›</span>
-              </a>
+      <!-- Card 1 -->
+      <div class="border rounded bg-gray-50 hover:shadow transition">
 
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Phone Numbers
-                <span class="text-gray-400">›</span>
-              </a>
-
-              <div
-                class="pt-6 text-gray-600 font-semibold flex items-center gap-2">
-                💼 Jobs
-              </div>
-
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600 mt-3">
-                My Profile
-                <span class="text-gray-400">›</span>
-              </a>
-
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Profile Database
-                <span class="text-gray-400">›</span>
-              </a>
-            </div>
-          </div>
-
-          <!-- Main Content -->
-          <div class="flex-1">
-            <!-- Page Title -->
-            <h2 class="text-xl font-semibold text-gray-800 border-b pb-4">
-              Favorites
-            </h2>
-
-            <!-- Empty State -->
-            <div
-              class="flex flex-col md:flex-row items-center md:items-start gap-8 py-16">
-              <!-- Star Icon -->
-              <div class="text-7xl text-yellow-400">★</div>
-
-              <!-- Text Content -->
-              <div class="max-w-xl text-center md:text-left">
-                <h3 class="text-lg font-semibold text-gray-800">
-                  You haven't marked any ads as favorite yet.
-                </h3>
-
-                <p class="text-gray-600 text-sm mt-4">
-                  Click on the star symbol on any ad to save it as a favorite.
-                </p>
-
-                <p class="text-gray-600 text-sm mt-2">
-                  Start to
-                  <a href="#" class="text-blue-600 hover:underline">
-                    browse ads
-                  </a>
-                  to find ads you would like to favorite.
-                </p>
-              </div>
-            </div>
-          </div>
+        <div class="flex items-center gap-3 p-4 border-b">
+          <i class="fa-solid fa-tags text-green-600 text-xl"></i>
+          <h3 class="font-semibold">Sell something</h3>
         </div>
+
+        <a href="/SELL-POST-FREE-AD.html" class="flex justify-between items-center px-4 py-3 text-blue-600 hover:bg-gray-100 border-b">
+          <span>Sell an item, property or service</span>
+          <i class="fa-solid fa-chevron-right text-gray-400"></i>
+        </a>
+
+        <a href="#" class="flex justify-between items-center px-4 py-3 text-blue-600 hover:bg-gray-100">
+          <span>Offer a property for rent</span>
+          <i class="fa-solid fa-chevron-right text-gray-400"></i>
+        </a>
+
       </div>
-       <!-- footer section -->
+
+      <!-- Card 2 -->
+      <div class="border rounded bg-gray-50 hover:shadow transition">
+
+        <div class="flex items-center gap-3 p-4 border-b">
+          <i class="fa-solid fa-briefcase text-blue-600 text-xl"></i>
+          <h3 class="font-semibold">Post a job vacancy</h3>
+        </div>
+
+        <a href="#" class="flex justify-between items-center px-4 py-3 text-blue-600 hover:bg-gray-100 border-b">
+          <span>Post a job in Bangladesh</span>
+          <i class="fa-solid fa-chevron-right text-gray-400"></i>
+        </a>
+
+        <a href="#" class="flex justify-between items-center px-4 py-3 text-blue-600 hover:bg-gray-100">
+          <span>Post a job overseas</span>
+          <i class="fa-solid fa-chevron-right text-gray-400"></i>
+        </a>
+
+      </div>
+
+      <!-- Card 3 -->
+      <div class="border rounded bg-gray-50 hover:shadow transition">
+
+        <div class="flex items-center gap-3 p-4 border-b">
+          <i class="fa-solid fa-magnifying-glass text-yellow-600 text-xl"></i>
+          <h3 class="font-semibold">Look for something</h3>
+        </div>
+
+        <a href="#" class="flex justify-between items-center px-4 py-3 text-blue-600 hover:bg-gray-100 border-b">
+          <span>Look for property to rent</span>
+          <i class="fa-solid fa-chevron-right text-gray-400"></i>
+        </a>
+
+        <a href="#" class="flex justify-between items-center px-4 py-3 text-blue-600 hover:bg-gray-100">
+          <span>Look for something to buy</span>
+          <i class="fa-solid fa-chevron-right text-gray-400"></i>
+        </a>
+
+      </div>
+
+    </div>
+
+    <!-- Bottom Links -->
+    <div class="text-center mt-10 text-sm text-blue-600">
+      <a href="#" class="hover:underline">Know your posting allowance</a>
+      <span class="mx-3 text-gray-400">|</span>
+      <a href="#" class="hover:underline">See our posting rules</a>
+    </div>
+
+  </div>
+</div>
+
+          <!-- footer section -->
     <footer class="bg-[#f2f3f5] pt-14 pb-8">
       <div class="max-w-6xl mx-auto px-4">
         <!-- Top Footer Grid -->
@@ -286,6 +270,6 @@
     </footer>
     </div>
 
-   
+
   </body>
 </html>
