--- a/SELL-POST-FREE-AD.html
+++ b/SELL-POST-FREE-AD.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -68,110 +68,150 @@
 
     <!-- acount section -->
     <div class="bg-[#eef2f3] min-h-screen py-10">
-      <div class="max-w-6xl mx-auto bg-white rounded-lg p-6">
-        <div class="flex flex-col lg:flex-row gap-8">
-          <!-- Sidebar -->
-          <div class="w-full lg:w-1/4">
-            <h2 class="text-lg font-semibold text-gray-700 mb-6">Account</h2>
+   <!-- Container -->
+<div class="max-w-4xl mx-auto bg-white mt-6 mb-10 p-6 md:p-10 rounded shadow">
 
-            <div class="space-y-4 text-[15px]">
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-gray-700 font-semibold">
-                My ads
-                <span class="text-gray-400">›</span>
-              </a>
+  <!-- Header -->
+  <div class="flex flex-col md:flex-row md:justify-between md:items-center mb-8 gap-3">
+    <h2 class="text-xl font-semibold">Fill in the details</h2>
+    <div class="text-sm text-green-600 flex flex-wrap gap-3">
+      <span><i class="fa-solid fa-location-dot"></i> Agrabad</span>
+      <span><i class="fa-solid fa-tag"></i> Mobile Phones</span>
+      <a href="#" class="text-blue-600 hover:underline">Change</a>
+    </div>
+  </div>
 
-              <a
-                href="/acount.html"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                My membership
-                <span class="text-gray-400">›</span>
-              </a>
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Saved searches
-                <span class="text-gray-400">›</span>
-              </a>
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Favorites
-                <span class="text-gray-400">›</span>
-              </a>
+  <!-- Condition -->
+  <div class="mb-6">
+    <label class="block font-medium mb-2">Condition</label>
+    <div class="flex flex-wrap gap-6 text-sm">
+      <label><input type="radio" name="condition" class="mr-1"> Used</label>
+      <label><input type="radio" name="condition" class="mr-1"> Brand New</label>
+    </div>
+  </div>
 
-              <a
-                href="/Settings.html"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Settings
-                <span class="text-gray-400">›</span>
-              </a>
+  <!-- Authenticity -->
+  <div class="mb-6">
+    <label class="block font-medium mb-2">Authenticity</label>
+    <div class="flex flex-wrap gap-6 text-sm">
+      <label><input type="radio" name="auth" class="mr-1"> Original</label>
+      <label><input type="radio" name="auth" class="mr-1"> Refurbished</label>
+    </div>
+  </div>
 
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Phone Numbers
-                <span class="text-gray-400">›</span>
-              </a>
+  <!-- Brand -->
+  <div class="mb-6">
+    <label class="block font-medium mb-2">Brand</label>
+    <select class="w-full border rounded p-2 text-sm">
+      <option>Select Brand</option>
+      <option>Apple</option>
+      <option>Samsung</option>
+      <option>Xiaomi</option>
+    </select>
+  </div>
 
-              <div
-                class="pt-6 text-gray-600 font-semibold flex items-center gap-2">
-                💼 Jobs
-              </div>
+  <!-- Model -->
+  <div class="mb-6">
+    <label class="block font-medium mb-2">Model</label>
+    <select class="w-full border rounded p-2 text-sm">
+      <option>Select Model</option>
+    </select>
+  </div>
 
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600 mt-3">
-                My Profile
-                <span class="text-gray-400">›</span>
-              </a>
+  <!-- Edition -->
+  <div class="mb-6">
+    <label class="block font-medium mb-2">Edition (optional)</label>
+    <input type="text" placeholder="Enter the edition of your phone"
+      class="w-full border rounded p-2 text-sm"/>
+  </div>
 
-              <a
-                href="#"
-                class="flex justify-between items-center pb-3 border-b text-blue-600">
-                Profile Database
-                <span class="text-gray-400">›</span>
-              </a>
-            </div>
-          </div>
+  <!-- Features Grid -->
+  <div class="mb-8">
+    <label class="block font-medium mb-3">Features (optional)</label>
 
-          <!-- Main Content -->
-          <div class="flex-1">
-            <!-- Page Title -->
-            <h2 class="text-xl font-semibold text-gray-800 border-b pb-4">
-              Favorites
-            </h2>
+    <div class="grid grid-cols-2 md:grid-cols-3 gap-3 text-sm">
+      <label><input type="checkbox" class="mr-1"> 4G</label>
+      <label><input type="checkbox" class="mr-1"> 5G</label>
+      <label><input type="checkbox" class="mr-1"> Dual SIM</label>
+      <label><input type="checkbox" class="mr-1"> Android</label>
+      <label><input type="checkbox" class="mr-1"> Fast Charging</label>
+      <label><input type="checkbox" class="mr-1"> Fingerprint Sensor</label>
+      <label><input type="checkbox" class="mr-1"> 64GB RAM</label>
+      <label><input type="checkbox" class="mr-1"> 128GB RAM</label>
+      <label><input type="checkbox" class="mr-1"> WiFi</label>
+    </div>
+  </div>
 
-            <!-- Empty State -->
-            <div
-              class="flex flex-col md:flex-row items-center md:items-start gap-8 py-16">
-              <!-- Star Icon -->
-              <div class="text-7xl text-yellow-400">★</div>
+  <!-- Description -->
+  <div class="mb-6">
+    <label class="block font-medium mb-2">Description</label>
+    <textarea rows="4"
+      class="w-full border rounded p-2 text-sm"
+      placeholder="More details = more interested buyers!"></textarea>
+  </div>
 
-              <!-- Text Content -->
-              <div class="max-w-xl text-center md:text-left">
-                <h3 class="text-lg font-semibold text-gray-800">
-                  You haven't marked any ads as favorite yet.
-                </h3>
+  <!-- Price -->
+  <div class="mb-6">
+    <label class="block font-medium mb-2">Price (Tk)</label>
+    <input type="number" placeholder="Pick a good price"
+      class="w-full border rounded p-2 text-sm"/>
+    <label class="text-sm mt-2 block">
+      <input type="checkbox" class="mr-1"> Negotiable
+    </label>
+  </div>
 
-                <p class="text-gray-600 text-sm mt-4">
-                  Click on the star symbol on any ad to save it as a favorite.
-                </p>
+  <!-- Add Photos -->
+  <div class="mb-8">
+    <h3 class="font-medium mb-3">Add up to 5 photos</h3>
 
-                <p class="text-gray-600 text-sm mt-2">
-                  Start to
-                  <a href="#" class="text-blue-600 hover:underline">
-                    browse ads
-                  </a>
-                  to find ads you would like to favorite.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
+    <div class="grid grid-cols-3 sm:grid-cols-5 gap-3">
+      <div class="border border-dashed p-4 text-center text-sm cursor-pointer hover:bg-gray-50">
+        <i class="fa-solid fa-camera text-blue-600 text-lg"></i>
+        <p>Add photo</p>
       </div>
-       <!-- footer section -->
+      <div class="border border-dashed p-4 text-center text-sm text-gray-400">Add photo</div>
+      <div class="border border-dashed p-4 text-center text-sm text-gray-400">Add photo</div>
+      <div class="border border-dashed p-4 text-center text-sm text-gray-400">Add photo</div>
+      <div class="border border-dashed p-4 text-center text-sm text-gray-400">Add photo</div>
+    </div>
+  </div>
+
+  <!-- Contact Details -->
+  <div class="border-t pt-6">
+    <h3 class="font-medium mb-4">Contact details</h3>
+
+    <div class="mb-4">
+      <label class="block text-sm mb-1">Name</label>
+      <input type="text" value="Jackson Chakma"
+        class="w-full border rounded p-2 text-sm"/>
+    </div>
+
+    <div class="mb-4">
+      <label class="block text-sm mb-1">Email</label>
+      <input type="email"
+        class="w-full border rounded p-2 text-sm"/>
+    </div>
+
+    <div class="mb-4">
+      <label class="block text-sm mb-1">Phone</label>
+      <input type="text"
+        class="w-full border rounded p-2 text-sm"/>
+    </div>
+
+    <label class="text-sm block mb-4">
+      <input type="checkbox" class="mr-1">
+      I have read and accept the Terms and Conditions
+    </label>
+
+    <button class="bg-green-600 text-white px-6 py-2 rounded hover:bg-green-700 transition w-full md:w-auto">
+      Post ad
+    </button>
+
+  </div>
+
+</div>
+
+          <!-- footer section -->
     <footer class="bg-[#f2f3f5] pt-14 pb-8">
       <div class="max-w-6xl mx-auto px-4">
         <!-- Top Footer Grid -->
@@ -286,6 +326,6 @@
     </footer>
     </div>
 
-   
+
   </body>
 </html>
