--- a/Saved-searches.html
+++ b/Saved-searches.html
@@ -23,7 +23,7 @@
               src="/img/images.jpg"
               alt="logo" />
             <span class="text-xl sm:text-3xl font-bold leading-none">
-              Bikroy
+              <a href="/">Bikroy</a>
             </span>
           </div>
 
@@ -53,10 +53,10 @@
           </div>
 
           <!-- Post Button -->
-          <button
+      <a href=""> <button
             class="bg-[#ffc800] text-black text-sm sm:text-base font-semibold px-3 sm:px-4 py-2 rounded hover:bg-yellow-400 transition">
             POST FREE AD
-          </button>
+          </button></a>
 
           <!-- Hamburger (Mobile Only) -->
           <button class="md:hidden text-2xl">
@@ -95,14 +95,14 @@
                 <span class="text-gray-400">›</span>
               </a>
               <a
-                href="#"
+                href="/Favorites.html"
                 class="flex justify-between items-center pb-3 border-b text-blue-600">
                 Favorites
                 <span class="text-gray-400">›</span>
               </a>
 
               <a
-                href="#"
+                href="/Settings.html"
                 class="flex justify-between items-center pb-3 border-b text-blue-600">
                 Settings
                 <span class="text-gray-400">›</span>
