--- a/allads.html
+++ b/allads.html
@@ -30,7 +30,7 @@
           src="/img/images.jpg"
           alt="logo" />
         <span class="text-xl sm:text-3xl font-bold leading-none">
-          Bikroy
+        <a href="/">Bikroy</a>
         </span>
       </div>
 
@@ -66,13 +66,13 @@
       </div>
 
       <!-- Post Button -->
-      <button
+     <a href="/POST-FREE-AD.html">  <button
         class="bg-[#ffc800] text-black 
                text-sm sm:text-base
                font-semibold px-3 sm:px-4 py-2 
                rounded hover:bg-yellow-400 transition">
         POST FREE AD
-      </button>
+      </button></a>
 
       <!-- Hamburger (Mobile Only) -->
       <button class="md:hidden text-2xl">
@@ -377,7 +377,7 @@
     <!-- Title -->
     <h3 class="text-[16px] sm:text-[18px] 
                font-semibold text-[#2d3a3f] leading-6">
-      OPPO F15 ৮+৩২GB Display finger (Used)
+    <a href="/OPPO.html">  OPPO F15 ৮+৩২GB Display finger (Used)</a>
     </h3>
 
     <!-- Member Badge -->
