--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
           <a href="#"><i class="fa-regular fa-comments"></i> Chat</a>
           <a href="/acount.html"><i class="fa-regular fa-user"></i> Account</a>
 
-          <button
+        <a href="/POST-FREE-AD.html"><button
             class="bg-[#ffc800] text-black font-semibold px-3 py-3 rounded">
             POST FREE AD
-          </button>
+          </button></a>
         </div>
       </div>
 
