--- a/allads.html
+++ b/allads.html
@@ -230,13 +230,12 @@
    
   <div class="bg-[#ffffff] py-8">
     
-  <div class="max-w-6xl mx-auto flex ">
+  <div class="max-w-6xl mx-auto flex flex-col lg:flex-row gap-6">
+
     
 
     <!-- LEFT SIDEBAR -->
-    <div class="w-full lg:w-1/4 
-            px-4 lg:px-0 
-            mt-6 lg:mt-0">
+    <div class="w-full lg:w-1/4 px-4 lg:px-0">
 
   <h2 class="text-base sm:text-lg 
              text-gray-600 font-semibold 
@@ -332,7 +331,7 @@
 
 
 <!-- RIGHT CONTENT -->
-    <div class="w-3/4 space-y-5">
+    <div class="w-full lg:w-3/4 space-y-6 px-4 lg:px-0">
 
       <!-- TOP INFO -->
 
@@ -361,7 +360,7 @@
             rounded-md px-4 py-4 
             flex flex-col sm:flex-row 
             gap-4 sm:gap-5
-            w-full max-w-4xl">
+            w-full">
 
   <!-- Image -->
   <div class="w-full sm:w-[200px] 
@@ -438,7 +437,7 @@
             rounded-md px-4 py-4 
             flex flex-col sm:flex-row 
             gap-4 sm:gap-5
-            w-full max-w-4xl">
+            w-full ">
 
   <!-- Image -->
   <div class="w-full sm:w-[200px] 
@@ -639,7 +638,7 @@
             rounded-md px-4 py-4 
             flex flex-col sm:flex-row 
             gap-4 sm:gap-5
-            w-full max-w-4xl">
+            w-full ">
 
   <!-- Image -->
   <div class="w-full sm:w-[200px] 
@@ -845,6 +844,8 @@
 
 </div>
 
+  </body>
+  
 <!--footer section  -->
     <footer class="bg-[#f2f3f5] mt-6 pt-14 pb-8">
       <div class="max-w-6xl mx-auto px-4">
@@ -958,5 +959,4 @@
         </div>
       </div>
     </footer>
-  </body>
 </html>
