your commit message

--- a/OPPO.html
+++ b/OPPO.html
@@ -134,29 +134,87 @@
       <div class="space-y-6">
 
         <!-- Seller Card -->
-        <div class="bg-white rounded shadow p-4 md:p-6 space-y-4">
+        <div class="bg-white border rounded-md overflow-hidden w-full max-w-sm">
 
-          <div class="flex items-center gap-3">
-            <div class="w-12 h-12 bg-gray-300 rounded-full"></div>
-            <div>
-              <p class="font-semibold text-sm md:text-base">Bike Life</p>
-              <p class="text-xs text-gray-500">Member since 2021</p>
-            </div>
-          </div>
+  <!-- Top Section -->
+  <div class="p-4 flex gap-3 items-start">
 
-          <button class="w-full bg-blue-600 text-white py-2 rounded hover:bg-blue-700 transition">
-            Show Phone Number
-          </button>
+    <!-- Logo -->
+    <img src="/img/company-logo.png"
+         class="w-16 h-16 object-cover rounded-sm border" />
 
-          <button class="w-full border py-2 rounded hover:bg-gray-100 transition">
-            Chat
-          </button>
+    <!-- Info -->
+    <div class="flex-1">
+      <h2 class="text-lg font-semibold text-gray-800">
+        Navana Real Estate ltd.
+      </h2>
 
-          <button class="w-full bg-green-500 text-white py-2 rounded hover:bg-green-600 transition">
-            WhatsApp
-          </button>
+      <div class="flex items-center gap-2 mt-1 text-xs">
 
-        </div>
+        <span class="flex items-center gap-1 bg-yellow-100 text-yellow-700 px-2 py-0.5 rounded-full font-medium">
+          ⭐ MEMBER
+        </span>
+
+        <span class="flex items-center gap-1 bg-blue-100 text-blue-700 px-2 py-0.5 rounded-full font-medium">
+          ✔ VERIFIED SELLER
+        </span>
+
+      </div>
+
+      <p class="text-sm text-gray-600 mt-2">
+        Member since February 2023
+      </p>
+
+      <a href="#" class="text-blue-600 text-sm hover:underline">
+        Visit member's shop
+      </a>
+
+    </div>
+
+  </div>
+
+  <!-- Divider -->
+  <div class="border-t"></div>
+
+  <!-- Phone -->
+  <div class="flex items-center gap-3 p-4 hover:bg-gray-50 cursor-pointer">
+
+    <div class="w-10 h-10 bg-green-100 flex items-center justify-center rounded-full">
+      📞
+    </div>
+
+    <div>
+      <p class="font-semibold text-gray-800">
+        01847XXXXXX
+      </p>
+      <p class="text-sm text-gray-500">
+        Click to show phone number
+      </p>
+    </div>
+
+  </div>
+
+  <div class="border-t"></div>
+
+  <!-- Chat -->
+  <div class="flex items-center gap-3 p-4 hover:bg-gray-50 cursor-pointer">
+    <div class="w-10 h-10 bg-yellow-100 flex items-center justify-center rounded-full">
+      💬
+    </div>
+    <p class="font-medium text-gray-800">Chat</p>
+  </div>
+
+  <div class="border-t"></div>
+
+  <!-- WhatsApp -->
+  <div class="flex items-center gap-3 p-4 hover:bg-gray-50 cursor-pointer">
+    <div class="w-10 h-10 bg-green-100 flex items-center justify-center rounded-full">
+      🟢
+    </div>
+    <p class="font-medium text-gray-800">WhatsApp</p>
+  </div>
+
+</div>
 
         <!-- Safety -->
         <div class="bg-blue-50 border border-blue-200 rounded p-4 text-sm">
