all page update

--- a/profile-database.html
+++ b/profile-database.html
@@ -20,7 +20,7 @@
           <div class="flex items-center  gap-2">
             <img
               class="w-10 h-10 sm:w-14 sm:h-14 object-contain"
-              src="/img/images.jpg"
+              src="/img/pexels-tracy-le-blanc-67789-607812.jpg"
               alt="logo" />
             <span class="text-xl sm:text-3xl font-bold leading-none">
               <a href="/">Bikroy</a>
